force-app/main/default/objects/AcctPlanWalletCreditFacility__c/AcctPlanWalletCreditFacility__c.object-meta.xml
<CustomObject>
    <label>Account Plan Wallet Credit Facility</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Wallet Credit Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Wallet Credit Facility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>