force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank</description>
    <inlineHelpText>Bank</inlineHelpText>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Account Plan Wallet Credit Facility</relationshipLabel>
    <relationshipName>Account_Wallet_Credit_Facility</relationshipName>
    <type>Lookup</type>
</CustomField>