force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/LimitAmount__c.field-meta.xml
<CustomField>
    <fullName>LimitAmount__c</fullName>
    <description>Limit Amount</description>
    <inlineHelpText>Limit Amount</inlineHelpText>
    <label>Limit Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>