force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/OtherCreditType__c.field-meta.xml
<CustomField>
    <fullName>OtherCreditType__c</fullName>
    <description>Other Credit Type (in case Others is selected</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Credit Type (in case Others is selected</inlineHelpText>
    <label>OtherCreditType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>