force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <description>Outstanding</description>
    <inlineHelpText>Outstanding</inlineHelpText>
    <label>Outstanding</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>