force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>ImportTransaction</fullName>
            </value>
            <value>
                <fullName>ExportTransaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>