force-app/main/default/objects/AcctPlanWalletCreditFacility__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>